--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2><a id="about">Обо мне</a></h2>
     <div class="text">
         <div class="blue">
-        Я работаю фотографом, видеографом, в общем - контентмейкером, учился на инженера-электрика. Очень много времни уделял и уделяю спорту, выполнил КМС по легкой атлетике и кик-боксингу, сейчас занимаюсь велоспортом, но для себя. Параллельно учился создавать свои первые сайты, занимался программированием, лего-конструированием,  (собственно, а почему бы и да)
+        Я работаю фотографом, видеографом, в общем - контентмейкером, учился на инженера-электрика. Очень много времни уделял и уделяю спорту, выполнил КМС по легкой атлетике и кик-боксингу, сейчас занимаюсь велоспортом, но для себя. Параллельно учился создавать свои первые сайты, занимался программированием, лего-конструированием (собственно, а почему бы и да)
         <img src="img/smile.png" width="18" alt=":-)">
         </div>
     </div>
